Revision history for Perl extension MusicBrainz::Queries.

All changes by Sander van Zoest <svanzoest@cpan.org> unless 
otherwise noted.

$Id$

0.06
	- Adjusted version number use statement to
	  the more backwards compatibile zero padded syntax.
	  [Matthias Friedrich, Sander van Zoest]

0.05  Mon Feb 24 23:40:49 2003
	- Fixed some POD typos
	- Switched to Test::More
	- Fixed 1.t tests [Sander van Zoest, Tom Heady]
	- Don't export constants by default.

0.03  Sat Feb 22 08:47:24 2003
	- Added documentation for all queries.

0.02  Thu Feb 20 20:56:21 2003
        - First public alpha version

0.01  Sun Feb 16 20:36:21 2003
	- original version; created by h2xs 1.22 with options
		-n MusicBrainz::Queries -b 5.6.1 /usr/local/include/musicbrainz/queries.h
